gcc/testsuite/rust/rustc/ui/eval-enum.rs
enum Test {
    DivZero = 1/0,
// { dg-error ".E0080." "" { target *-*-* } .-1 }
// { dg-error ".E0080." "" { target *-*-* } .-2 }
    RemZero = 1%0,
// { dg-error ".E0080." "" { target *-*-* } .-1 }
// { dg-error ".E0080." "" { target *-*-* } .-2 }
}

fn main() {}

